EKS/Day5-Fargate with Dockerhub/EKS-Fargate/manfiests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: demo-app
          image: jashshah/nginx-jash-fargate:latest
          ports:
            - containerPort: 80
