EKS/Day5-Fargate with Dockerhub/EKS-Fargate/manfiests/service.yml

apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: demo
spec:
  type: ClusterIP
  selector:
    app: demo-app
  ports:
    - port: 80
      targetPort: 80
